# ofronds

./: ofronds.opam
exercises/: info.se
exercises/3.immutability_and_local_shadowing/b_local_shadowing/: dune
exercises/5.more_on_functions/h_functions_as_parameters/: dune
